<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Accident Report</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    
    <string name="images">Images</string>
    
    <string name="google_api_key">AIzaSyAnIMQK-21a8Y2k-n9AuMk-3_9ibNlEhOo</string>
    
    <string name="get_location">Location</string>
    
    <!-- Casulty -->
    <string name="full_name">Full Name</string>
    <string name="full_name_dt">FullName</string>
    <string name="id">Id</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone Number</string>
    <string name="phone_no_dt">PhoneNumber</string>
    <string name="age">Age</string>
    <string name="is_hospitalized">Was he/she taken to hospital?</string>
    <string name="is_hos">hospitalized</string>
    <string name="save">Save</string>
    <string name="click_here">Click Here</string>
    <string name="casulty">Casualties</string>
    <string name="cancel">Cancel</string>
    
    <!--Date Time  -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="datetime">Date and Time</string>
    
    <!--Description  -->
    <string name="description">Description of Accident</string>
     <string name="des">Description</string>
    
    <!-- Insurance -->
    <string name="agency_name">Agency Name</string>
    <string name="policy_number">Policy Number</string>
    <string name="agent_name">Agent Name</string>
    <string name="agent_number">Agent Number</string>
    
    <string name="agency_name_dt">AgencyName</string>
    <string name="policy_number_dt">PolicyNumber</string>
    <string name="agent_name_dt">AgentName</string>
    <string name="agent_number_dt">AgentNumber</string>
    <string name="insurance">Insurance</string>
    
    <!--Third Party  -->
      <string name="driver_name">Driver Name</string>
    <string name="license_number">License Number</string>
    <string name="driver_name_dt">DriverName</string>
    <string name="license_number_dt">LicenseNumber</string>
     <string name="is_vehicle_owner">The driver is not the vehicle owner?</string>
     <string name="is_owner">isOwner</string>
     <string name="thirdparty">Third Party</string>
    
     <!--Vehical  -->
    <string name="vehicle_type">vehicle Type</string>
    <string name="vehicle_type_dt">vehicleType</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="license_plate">License Plate</string>
    <string name="license_plate_dt">LicensePlate</string>
    <string name="vehicle">vehicle</string>
    
    <!--Police  -->
    <string name="event_number">Event Number</string>
    <string name="case_number">Case Number</string>
    <string name="unit_name">Unit Name</string>
    <string name="station_name">Station Name</string>
    <string name="police">Police</string>
    
    <string name="event_number_dt">EventNumber</string>
    <string name="case_number_dt">CaseNumber</string>
    <string name="unit_name_dt">UnitName</string>
    <string name="station_name_dt">StationName</string>
    
    <string name="ids">ids</string>
    
    <string name="witness">Witnesses</string>
    
    <!--IMAGE PATH  -->
    <string name="img_path">ImagePath</string>
    
    <!-- Location Map -->
    
     <string name="location_map">Location Map</string>
     <string name="load_map">To Load a Map or your Location</string>
     <!-- Picture -->
     <string name="picture_text">Picture</string>
     <string name="picture_dis">Take a Picture of the Accident</string>
     
     <!-- Damage -->
     <string name="damage_text">Damage</string>
     <string name="damage_dis">Draw a vehicle damage sketch</string>
     
     <!--menu Items  -->
     <string name="my_details">My Details</string>
     <string name="history">History</string>
     <string name="language">Language</string>
     <string name="tell_a_friend">Tell a Friend</string>
     <string name="about_us">About Us</string>
     <string name="exit_application">Exit Application</string>
     
     <string name="send_report">Send the Report</string>
    
    <!--Color  -->
     <color name="blue">#007aff</color>
     <color name="click_here_col">#E62222</color>
     <!-- <color name="green">#009900</color> -->
     <color name="gray">#d6d6d6</color>
     
     <!-- Tweing popup -->
     <string name="towing_heading">Do you require free Towing sydney wide ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
