<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/cas_full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/cas_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/cas_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/cas_phone_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/cas_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <CheckBox
            android:id="@+id/is_hospitalized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_hospitalized"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/cas_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

</RelativeLayout>