<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/date_towing"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/date"
        
        />
    
    <Button 
        android:id="@+id/get_location"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/get_location"
        />
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
     <Button 
        android:id="@+id/save_towing"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/save"
        />
     
     <Button 
        android:id="@+id/cancel_towing"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/cancel"
        />
     </LinearLayout>

</LinearLayout>
