<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/vehical_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehical_type"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/manufacturer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manufacturer"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/model"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

          <EditText
            android:id="@+id/license_plate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/license_plate"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />
    </LinearLayout>

    <Button
        android:id="@+id/cas_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundcorner"
        android:text="@string/save" />

</RelativeLayout>