<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
     >
    
     <include android:id="@+id/header2"
        layout="@layout/header_fragments"/>

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header2"
        android:padding="20dp"
        >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/agency_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agency_name"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/policy_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/policy_number"
            android:inputType="numberDecimal"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/agent_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agent_name"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/agent_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agent_number"
            android:inputType="numberDecimal"
            android:paddingBottom="@dimen/edit_text_padding"
            android:paddingTop="@dimen/edit_text_padding" />
    </LinearLayout>

    <Button
        android:id="@+id/cas_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundcorner"
        android:paddingTop="@dimen/botton_padding"
        android:paddingBottom="@dimen/botton_padding"
        android:text="@string/save" />
</RelativeLayout>
</RelativeLayout>