<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >
    
  <RelativeLayout 
    android:id="@+id/location_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
     >  
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/damage_text"
        android:gravity="center"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:drawableTop="@drawable/damage_sketch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
   <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/damage_dis"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   
   
    <Button
        android:id="@+id/click_hear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundcorner"
        android:paddingTop="@dimen/botton_padding"
        android:paddingBottom="@dimen/botton_padding"
        android:text="@string/click_here" />
    
    </RelativeLayout>
 
  <RelativeLayout 
    android:id="@+id/location_layout_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
     >  
  
       <Button
        android:id="@+id/click_hear_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundcorner"
        android:paddingTop="@dimen/botton_padding"
        android:paddingBottom="@dimen/botton_padding"
        android:text="@string/click_here" />
       
  <!--  <fragment 
        android:id="@+id/map_list"
       	android:name="com.google.android.gms.maps.MapFragment" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        /> -->
    
    </RelativeLayout>

    
</RelativeLayout>